# ENSC351-assignments

./: .gitignore  mount
as1/: CMakeLists.txt  as1-capture  error.txt  readme  readme.txt
as1/app/: CMakeLists.txt  reaction_timer.c
as1/hal/: CMakeLists.txt  led  led.c  led.h  led_target
as1/hal/include/hal/: SPI.h  led.h  timing.h
as1/hal/src/: SPI.c  led.c  timing.c
myApps/SPI/: SPI.c
myApps/quickStart/: helloworld.c  helloworld_host
